--- a/cosmetics12/pom.xml
+++ b/cosmetics12/pom.xml
@@ -88,6 +88,12 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-freemarker</artifactId>
 		</dependency>
+
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-context-support</artifactId>
+			<version>6.1.1</version>
+		</dependency>
 	</dependencies>
 
 	<build>
