--- a/cosmetics12/src/main/resources/application.properties
+++ b/cosmetics12/src/main/resources/application.properties
@@ -9,9 +9,9 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.datasource.hikari.idleTimeout=600000
 spring.datasource.hikari.maxLifetime=1800000
 spring.mail.host=smtp.gmail.com
-spring.mail.port=587
+#spring.mail.port=587
 spring.mail.username=poojapurbey469@gmail.com
-spring.mail.password=nphp gbpz wvpe aqrw
+#spring.mail.password=nphp gbpz wvpe aqrw
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.thymeleaf.prefix=
