--- a/FrontendGlamcart/package.json
+++ b/FrontendGlamcart/package.json
@@ -26,12 +26,13 @@
     "react-icons": "^4.12.0",
     "react-lazy-load-image-component": "^1.6.0",
     "react-query": "^3.39.3",
-    "react-redux": "^9.1.0",
     "react-router-dom": "^6.21.1",
     "react-toastify": "^10.0.4",
-    "redux": "^5.0.1"
+    "sonner": "^1.4.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.23.9",
+    "@babel/preset-env": "^7.23.9",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@types/react-helmet": "^6.1.11",
@@ -44,8 +45,9 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "postcss": "^8.4.35",
+    "rollup": "^4.12.0",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5.2.2",
-    "vite": "^5.0.8"
+    "typescript": "^5.3.3",
+    "vite": "^5.1.4"
   }
 }
